tests/ui/impl-trait/in-trait/rpitit-hidden-types-self-implied-wf.stderr
error[E0491]: in type `&'static &()`, reference has a longer lifetime than the data it references
  --> $DIR/rpitit-hidden-types-self-implied-wf.rs:6:27
   |
LL |     fn extend(s: &str) -> (Option<&'static &'_ ()>, &'static str) {
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the pointer is valid for the static lifetime
note: but the referenced data is only valid for the anonymous lifetime defined here
  --> $DIR/rpitit-hidden-types-self-implied-wf.rs:2:18
   |
LL |     fn extend(_: &str) -> (impl Sized + '_, &'static str);
   |                  ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0491`.
